static/css/style.css
:root {
  --primary: #f69050;
  --light: #f0fbfc;
  --light: #f0e4de;
  --dark: #181d38;
}
.btn {
  background-color: #fb873f;
  border: none;
}
.btn a {
  text-decoration: none;
  color: #fff;
}
.btn:hover {
  background: 0 0;
  color: var(--primary) !important;
  border: 1px solid var(--primary);
}
.btn:hover a {
  color: var(--primary) !important;
}
.btn-light {
  background-color: var(--light);
}
.btn-light:hover {
  background: 0 0;
  color: var(--light) !important;
  border: 1px solid var(--light);
}
.back-to-top {
  position: fixed;
  display: none;
  left: 45px;
  bottom: 45px;
  z-index: 99;
}
#spinner {
  opacity: 0;
  visibility: hidden;
  transition: opacity 0.5s ease-out, visibility 0s linear 0.5s;
  z-index: 99999;
}
#spinner.show {
  transition: opacity 0.5s ease-out, visibility 0s linear 0s;
  visibility: visible;
  opacity: 1;
}
.btn {
  font-family: Nunito, sans-serif;
  font-weight: 600;
  transition: 0.5s;
}
.btn.btn-primary {
  color: #fff;
}
.btn-square {
  width: 38px;
  height: 38px;
}
.btn-sm-square {
  width: 32px;
  height: 32px;
}
.btn-lg-square {
  width: 48px;
  height: 48px;
}
.btn-lg-square,
.btn-sm-square,
.btn-square {
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  font-weight: 400;
  border-radius: 0;
}
.navbar .dropdown-toggle::after {
  border: none;
  content: "\f107";
  font-family: "Font Awesome 5 Free";
  font-weight: 900;
  vertical-align: middle;
  margin-left: 8px;
}
.navbar-light .navbar-nav .nav-link {
  margin-right: 30px;
  padding: 25px 0;
  color: #fff;
  font-size: 15px;
  text-transform: uppercase;
  outline: 0;
}
.navbar-light .navbar-nav .nav-link.active,
.navbar-light .navbar-nav .nav-link:hover {
  color: var(--primary);
}
@media (max-width: 991.98px) {
  .navbar-light .navbar-nav .nav-link {
    margin-right: 0;
    padding: 10px 0;
  }
  .navbar-light .navbar-nav {
    border-top: 1px solid #eee;
  }
}
.navbar-light .navbar-brand,
.navbar-light a.btn {
  height: 75px;
}
.navbar-light .navbar-nav .nav-link {
  color: var(--dark);
  font-weight: 500;
}
.navbar-light.sticky-top {
  top: -100px;
  transition: 0.5s;
}
.navbar-toggler-icon {
  color: #fb873f;
}
.navbar-toggler {
  border: 2px solid #fb873f;
}
@media (min-width: 992px) {
  .navbar .nav-item .dropdown-menu {
    display: block;
    margin-top: 0;
    opacity: 0;
    visibility: hidden;
    transition: 0.5s;
  }
  .navbar .dropdown-menu.fade-down {
    top: 100%;
    transform: rotateX(-75deg);
    transform-origin: 0 0;
  }
  .navbar .nav-item:hover .dropdown-menu {
    top: 100%;
    transform: rotateX(0);
    visibility: visible;
    transition: 0.5s;
    opacity: 1;
  }
}
.header-carousel .owl-carousel-item {
  position: relative;
  height: 100vh;
}
.header-carousel p {
  margin-top: 20px;
  font-size: 20px;
  line-height: 30px;
}
@media (max-width: 1300px) {
  .header-carousel .owl-carousel-item {
    position: relative;
    min-height: 80vh;
  }
  .header-carousel .owl-carousel-item img {
    position: absolute;
    width: 100%;
    height: 100%;
    object-fit: cover;
  }
}
@media (max-width: 768px) {
  .header-carousel .owl-carousel-item {
    position: relative;
    min-height: 500px;
  }
  .header-carousel .owl-carousel-item img {
    position: absolute;
    width: 100%;
    height: 100%;
    object-fit: cover;
  }
}
@media (max-width: 430px) {
  .header-carousel .owl-carousel-item {
    position: relative;
    height: 500px;
  }
  .header-carousel .owl-carousel-item img {
    position: absolute;
    width: 100%;
    height: 100%;
    object-fit: cover;
  }
  .header-carousel h1 {
    font-size: 30px;
    line-height: 30px;
  }
  .header-carousel p {
    margin-top: 20px;
    font-size: 15px;
    line-height: 20px;
  }
}
.header-carousel .owl-nav {
  position: absolute;
  top: 50%;
  right: 8%;
  transform: translateY(-50%);
  display: flex;
  flex-direction: column;
}
.page-header {
  background: linear-gradient(rgba(24, 29, 56, 0.7), rgba(24, 29, 56, 0.7)),
    url(https://datasciencedigest.in/static/img/back4.gif);
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
}
.section-title {
  position: relative;
  display: inline-block;
  text-transform: uppercase;
}
.section-title::before {
  position: absolute;
  content: "";
  width: calc(100% + 80px);
  height: 2px;
  top: 4px;
  left: -40px;
  background: var(--primary);
  z-index: -1;
}
.section-title::after {
  position: absolute;
  content: "";
  width: calc(100% + 120px);
  height: 2px;
  bottom: 5px;
  left: -60px;
  background: var(--primary);
  z-index: -1;
}
.section-title.text-start::before {
  width: calc(100% + 40px);
  left: 0;
}
.section-title.text-start::after {
  width: calc(100% + 60px);
  left: 0;
}
.service-item {
  transition: 0.5s;
}
.service-item i {
  color: var(--primary);
}
.service-item:hover {
  margin-top: -10px;
  background: var(--primary);
}
.service-item * {
  transition: all 0.3s ease-in-out;
}
.service-item:hover * {
  color: #fff !important;
}
.course-item img {
  width: 100%;
  height: 200px;
  border-radius: 5px;
  object-fit: cover;
}
.category .content {
  cursor: pointer;
  transition: 0.5s;
}
.category .content:hover {
  background-color: var(--primary);
  color: #fff;
}
.category .content h5 a {
  text-decoration: none;
  color: var(--dark);
  transition: all 0.3s ease-in-out;
}
.category .content:hover h5 a {
  color: #fff !important;
}
.category img {
  width: 50px;
  height: 50px;
}
.category img,
.course-item img {
  transition: 0.5s;
}
.category a:hover img,
.course-item:hover img {
  transform: scale(1.1);
  margin-top: -10px;
}
.testimonial-carousel::before {
  position: absolute;
  content: "";
  top: 0;
  left: 0;
  height: 100%;
  width: 0;
  background: linear-gradient(
    to right,
    rgba(255, 255, 255, 1) 0,
    rgba(255, 255, 255, 0) 100%
  );
  z-index: 1;
}
.testimonial-carousel::after {
  position: absolute;
  content: "";
  top: 0;
  right: 0;
  height: 100%;
  width: 0;
  background: linear-gradient(
    to left,
    rgba(255, 255, 255, 1) 0,
    rgba(255, 255, 255, 0) 100%
  );
  z-index: 1;
}
@media (min-width: 768px) {
  .testimonial-carousel::after,
  .testimonial-carousel::before {
    width: 200px;
  }
}
@media (min-width: 992px) {
  .testimonial-carousel::after,
  .testimonial-carousel::before {
    width: 300px;
  }
}
.testimonial-carousel .owl-item .testimonial-text,
.testimonial-carousel .owl-item.center .testimonial-text * {
  transition: 0.5s;
}
.testimonial-carousel .owl-item.center .testimonial-text {
  background: var(--primary) !important;
}
.testimonial-carousel .owl-item.center .testimonial-text * {
  color: #fff !important;
}
.testimonial-carousel .owl-dot {
  position: relative;
  display: inline-block;
  margin: 0 5px;
  width: 15px;
  height: 15px;
  border: 1px solid #ccc;
  transition: 0.5s;
}
.testimonial-carousel .owl-dot.active {
  background: var(--primary);
  border-color: var(--primary);
}
.footer .btn.btn-social {
  margin-right: 5px;
  width: 35px;
  height: 35px;
  display: flex;
  align-items: center;
  justify-content: center;
  color: var(--light);
  font-weight: 400;
  border: 1px solid #fff;
  border-radius: 35px;
  transition: 0.3s;
}
.footer .btn.btn-social:hover {
  color: var(--primary);
}
.footer .btn.btn-link {
  display: block;
  margin-bottom: 5px;
  padding: 0;
  text-align: left;
  color: #fff;
  font-size: 15px;
  font-weight: 400;
  text-transform: capitalize;
  transition: 0.3s;
}
.footer .btn.btn-link::before {
  position: relative;
  content: "\f105";
  font-family: "Font Awesome 5 Free";
  font-weight: 900;
  margin-right: 10px;
}
.footer .btn.btn-link:hover {
  letter-spacing: 1px;
  box-shadow: none;
}
.footer .copyright {
  padding: 25px 0;
  font-size: 15px;
  border-top: 1px solid rgba(256, 256, 256, 0.1);
}
.footer .copyright a {
  color: var(--light);
}
.footer .footer-menu a {
  margin-right: 15px;
  padding-right: 15px;
  border-right: 1px solid rgba(255, 255, 255, 0.1);
}
.footer .footer-menu a:last-child {
  margin-right: 0;
  padding-right: 0;
  border-right: none;
}
.compilers-section {
  display: flex;
  justify-content: center;
  padding: 50px 20px;
  background-color: #fff;
}
.compilers-container {
  max-width: 1200px;
  width: 100%;
  padding: 20px;
}
.compilers-row {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 40px;
}
.compilers-image {
  flex: 1;
  max-width: 50%;
}
.compilers-image img {
  width: 100%;
  height: auto;
  border-radius: 8px;
}
.compilers-content {
  flex: 1;
  max-width: 50%;
  text-align: left;
}
.compilers-content h2 {
  font-size: 32px;
  color: #333;
  margin-bottom: 20px;
}
.compilers-content p {
  font-size: 18px;
  color: #666;
  margin-bottom: 40px;
}
.compiler-options {
  display: flex;
  gap: 40px;
  margin-bottom: 20px;
  justify-content: center;
}
.compiler-column {
  display: flex;
  flex-direction: column;
  gap: 20px;
}
.compiler-button {
  text-decoration: none;
  background-color: #f3f4f6;
  padding: 20px;
  font-size: 18px;
  color: #333;
  border-radius: 8px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  transition: background-color 0.3s ease;
}
.compiler-button span {
  display: block;
  color: #050505;
  font-size: 16px;
  margin-top: 8px;
}
.compiler-button:hover {
  background-color: #e2e6ea;
}
@media (max-width: 768px) {
  .compilers-row {
    flex-direction: column;
  }
  .compilers-content,
  .compilers-image {
    max-width: 100%;
  }
}
.illustration img {
  width: 400px;
  height: auto;
}
@font-face {
  font-family: Roboto;
  src: url(https://fonts.gstatic.com/s/roboto/v29/KFOmCnqEu92Fr1Mu4mxM.woff2)
    format("woff2");
  font-display: swap;
}
.lazy-bg {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    min-height: 300px; /* Adjust as needed */
}

